# git_scroll

./: Cargo.toml  README.md  project_status_3.md
src/: app.rs  main.rs
src/directory/: mod.rs
src/git/: mod.rs
src/ui/: mod.rs
src/visualization/: mod.rs
